[package]
name = "fido_mds3_attestation_ca"
version = "0.1.1-alpha.3"
edition = "2024"                    # ← Rust 2024 edition (1.85+)
authors = ["Ganesh Kamlakar Jadhav <ganesh.jadhav16986@gmail.com>"]
description = "Library for extracting FIDO Metadata Service (MDS3) attestation trust anchors for WebAuthn authenticator verification, compatible with webauthn-rs."
repository = "https://github.com/GaneshJadhavOnGitHub/fido_mds3_attestation_ca"
license = "MIT OR Apache-2.0"
keywords = ["webauthn", "fido2", "mds3", "attestation", "passkeys"]
categories = ["authentication", "web-programming", "parsing", "cryptography"]
readme = "README.md"
homepage = "https://github.com/GaneshJadhavOnGitHub/fido_mds3_attestation_ca"
documentation = "https://docs.rs/fido_mds3_attestation_ca/latest/fido_mds3_attestation_ca/"
build = "build.rs"
include = [
    "/src",
    "/examples",
    "/tests",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE-*",
    "/data",
    "/README.md",
]

[lib]
name = "fido_mds3_attestation_ca"
path = "src/lib.rs"

[[bin]]
name = "fido_mds3_attestation_ca"
path = "src/main.rs"

[dependencies]
# Core library dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
base64 = "0.21"
x509-parser = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"
dirs = "5.0"
hex = "0.4"         
sha2 = "0.10"
webauthn-rs = "0.5.4"
uuid = { version = "1.21.0", features = ["v5"] }
log = "0.4.29"
env_logger = "0.11.9"
# CLI-only dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
ureq = { version = "2.9", features = ["tls"], optional = true }


[build-dependencies]
ureq = { version = "2.9", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v5"] }
chrono = { version = "0.4", features = ["serde"] }
webauthn-rs = "0.5.4"
serde_json = "1.0"
base64 = "0.21"
x509-parser = "0.15"
hex = "0.4" 
dirs = "5.0"        
sha2 = "0.10"
thiserror = "1.0"
log = "0.4.29"
env_logger = "0.11.9"


[dev-dependencies]
env_logger = "0.11.9"   
log = "0.4.29"


[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif", "dep:console", "dep:ureq"]
# feature for the optional embedded fallback
embedded = []